[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lilya"
description = "Yet another ASGI toolkit that delivers"
long_description = "Yet another ASGI toolkit that delivers"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ['version']
authors = [{ name = "Tiago Silva", email = "tiago.arasilva@gmail.com" }]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "anyio>=3.4.0,<5",
    "multidict>=6.0.4,<7.0.0",
    "typing_extensions>=3.10.0; python_version < '3.11'",
    "rich_toolkit>=0.14.7",
    "sayer>=0.3.4,<1.0.0",
    "monkay>=0.4.0",
]
keywords = ["lilya"]

[project.urls]
Homepage = "https://github.com/dymmond/lilya"
Documentation = "https://lilya.dev"
Changelog = "https://lilya.dev/release-notes/"
Funding = "https://github.com/sponsors/tarsil"
Source = "https://github.com/dymmond/lilya"

[project.optional-dependencies]
all = [
    "click>=8.1.7,<9.0.0",
    "jinja2>=3.1.3",
    "rich>=13.7.0,<15.0.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.22.0",
    "ipython",
    "ptpython",
    "rich-toolkit>=0.14.7",
]

cli = [
    "click>=8.1.7,<9.0.0",
    "jinja2>=3.1.3",
    "rich>=13.7.0,<15.0.0",
    "rich-toolkit>=0.14.7",
    "uvicorn[standard]>=0.29.0",
]

test = ["httpx>=0.22.0"]
testing = [
    "asyncz",
    "lilya[test]",
    "a2wsgi>=1.10.0,<2.0.0",
    "autoflake>=2.0.2,<3.0.0",
    "anyio[trio]>=3.6.2,<5.0.0",
    "edgy[postgres]>=0.14.0",
    "email-validator>=2.1.0.post1",
    "databasez>=0.9.7",
    "orjson",
    "freezegun",
    "flask>=3.0.2,<4.0.0",
    "httpx>=0.25.2,<1.0.0",
    "jinja2>=3.1.3,<4.0.0",
    "msgspec>=0.18.6,<0.20.0",
    "pydantic>=2.6.0,<3",
    "pytest>=7.2.2,<9.0.0",
    "pytest-asyncio>=0.23.2",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-mock>=3.12.0",
    "python-multipart>=0.0.13",
    "mypy==1.16.1",
    "pyyaml>=6.0,<7.0.0",
    "typing_extensions>=3.10.0",
    "ipython",
    "ptpython",
    "pyjwt",
    "redis",
    "ipdb",
    "structlog",
    "loguru",
]

docs = [
    "griffe-typingdoc>=0.2.2,<1.0",
    "mkautodoc>=0.2.0,<0.3.0",
    "mkdocs>=1.1.2,<2.0.0",
    "mkdocs-material>=9.4.4,<10.0.0",
    "mdx-include>=1.4.2,<2.0.0",
    "mkdocs-macros-plugin>=0.4.0",
    "mkdocs-meta-descriptions-plugin>=2.3.0",
    "mkdocstrings[python]>=0.23.0,<0.30.0",
    "pyyaml>=6.0,<7.0.0",
    "typing_extensions>=3.10.0",
]

openapi = ["pydantic>=2.11.5,<3"]

[tool.hatch.version]
path = "lilya/__init__.py"


[tool.hatch.envs.default]
dependencies = [
    "mypy==1.16.1",
    "typing_extensions>=3.10.0",
    "ruff>=0.3.0,<5.0.0",
    "pre-commit>=3.3.1,<4.0.0",
    "devtools>=0.12.2",
    "ipython",
    "ptpython",
    "twine",
]
[tool.hatch.envs.default.scripts]
clean_pyc = "find . -type f -name \"*.pyc\" -delete"
clean_pyi = "find . -type f -name \"*.pyi\" -delete"
clean_pycache = "find . -type d -name \"*__pycache__*\" -delete"
build_with_check = "hatch build; twine check dist/*"
lint = "hatch fmt --check && hatch run test:check_types"
format = "hatch fmt && hatch fmt --check && hatch run test:check_types"

[tool.hatch.envs.docs]
features = ["all", "docs"]

[tool.hatch.envs.docs.scripts]
update_languages = "scripts/docs.py update-languages"
build = "hatch run docs:update_languages; scripts/docs.py build-all"
build_lang = "hatch run docs:update_languages; scripts/docs.py build --lang {args}"
serve = "hatch run docs:update_languages; scripts/docs.py live"
dev = "hatch run docs:update_languages; scripts/docs.py serve"
serve_lang = "hatch run docs:update_languages; scripts/docs.py live --lang {args}"
new_lang = "hatch run docs:update_languages; scripts/docs.py new-lang --lang {args}"


[tool.hatch.envs.test]
features = ['testing', "cli"]
installer = "pip"

[tool.hatch.envs.test.scripts]
# needs docker services running
test = "hatch test -- {args}"
test_man = "hatch test -- {args} -s -vv"
coverage = "hatch test -- --cov=lilya --cov=tests --cov-report=term-missing:skip-covered --cov-report=html tests {args}"
check_types = "mypy -p lilya"


[tool.hatch.envs.hatch-static-analysis]
# disables custom ruff rules, required to align with pre-commit
config-path = "none"
dependencies = ["ruff==0.12.2"]

[tool.hatch.envs.hatch-test]
features = ['testing', "cli"]
template = "test"
installer = "pip"

[tool.hatch.envs.hatch-test.env-vars]
LILYA_SETTINGS_MODULE = "tests.settings.TestSettings"

[project.scripts]
lilya = "lilya.__main__:run_cli"

[tool.mypy]
strict = true
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
disallow_untyped_decorators = true
disallow_any_generics = false
implicit_reexport = false
show_error_codes = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = false
strict_equality = false
strict_optional = false
disable_error_code = "attr-defined,has-type,override,misc,safe-super"
exclude = ["lilya/compat.py"]

[tool.ruff]
line-length = 99
fix = true

exclude = ["docs_src/"]

[tool.ruff.lint]

select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "I",
    "FA",
    "UP",
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B026",  # too complex
    "UP006",
    "UP038",
]


[tool.ruff.lint.pycodestyle]
max-line-length = 99
# max-doc-length = 120


[tool.ruff.lint.isort]
combine-as-imports = true


[tool.coverage.run]
parallel = true
context = '${CONTEXT}'
source = ["tests", "lilya"]
# omit = []

[[tool.mypy.overrides]]
module = ["multipart.*", "mako.*", "uvicorn.*", "jwt.*"]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "docs_src.*"
ignore_errors = true

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
xfail_strict = true
junit_family = "xunit2"

[tool.hatch.build.targets.sdist]
include = ["/lilya"]
